Create basic components for general layout

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,9 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<div class="flex">
+	<Bands />
+	<Channels />
 
-{{outlet}}
+	{{!-- Main --}}
+	<main class="w-full p-2 bg-gray-200 h-screen main">
+		Main Content
+	</main>
+</div>
