--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,1 @@
-<div class="flex">
-	<Bands />
-	<Channels />
-
-	{{!-- Main --}}
-	<main class="w-full p-2 bg-gray-200 h-screen main">
-		Main Content
-	</main>
-</div>
+{{outlet}}
