Add nested routing, reorder components, and introduce mock data

--- a/app/templates/components/band-nav.hbs
+++ b/app/templates/components/band-nav.hbs
@@ -1,4 +1,6 @@
 {{!-- Bands Nav --}}
 <nav class="w-12 flex-none p-2 bg-gray-900 text-white text-white h-screen bands">
-	<Band />
+	{{#each @bands as |band|}}
+	<BandItem @band={{band}} />
+	{{/each}}
 </nav>
