--- a/app/templates/components/channel-nav.hbs
+++ b/app/templates/components/channel-nav.hbs
@@ -1,4 +1,5 @@
 {{!-- Channel Nav --}}
 <nav class="w-48 flex-none bg-gray-800 text-white h-screen channels">
-	<Channel />
+	{{@band.name}}
+	<ChannelItem />
 </nav>
