--- a/app/components/channel-footer.hbs
+++ b/app/components/channel-footer.hbs
@@ -1,9 +1,9 @@
 <form {{on 'submit' this.handleSubmit}} class="w-full flex">
 	<input
-		class="bg-gray-100 appearance-none border-2 border-gray-300 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+		class="bg-gray-100 appearance-none border-2 border-gray-300 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 footer-message-input"
 		id="inline-full-name" type="text" placeholder="New Message" value={{this.body}}
-		{{on 'input' this.updateMessageBody}}>
+		{{on 'input' this.updateMessageBody}} />
 	<input
-		class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded {{if this.isDisabled "opacity-50" ""}}"
+		class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded footer-message-submit {{if this.isDisabled "opacity-50" ""}}"
 		type="submit" value="Send" />
 </form>
